# OOPHomeWork

./: CMakeLists.txt  Mac.cpp  Mac.h  NewSuperLeague1.txt  Oyuncu.cpp  Oyuncu.h  Takim.cpp  Takim.h  deneme.cpp  main.cpp  main3.cpp  oyuncuHuso.cpp
